--- a/appMover/app-mover-body.html
+++ b/appMover/app-mover-body.html
@@ -43,7 +43,7 @@
                                 <tr ng-repeat="row in model.appListTable">
                                     <td class="column">
                                         <label class="lui-checkbox">
-                                            <input name="name" id="row[0]" class="lui-checkbox__input" type="checkbox" ng-model="row[0]" ng-change="model.checkBox(true, row[0], row[1])"/>
+                                            <input name="name" id="row[0]" class="lui-checkbox__input" type="checkbox" ng-model="row[0]" ng-change="model.checkBoxApps(row[0], row[1], row[2])"/>
                                             <div class="lui-checkbox__check-wrap">
                                                 <span class="lui-checkbox__check" ></span>
                                             </div>
@@ -84,7 +84,7 @@
                                 <tr ng-repeat="row in model.hostnameListTable">
                                     <td class="column">
                                         <label class="lui-checkbox">
-                                            <input name="name" id="row[0]" class="lui-checkbox__input" type="checkbox" ng-model="row[0]" ng-change="model.checkBox(false, row[0], row[1])"/>
+                                            <input name="name" id="row[0]" class="lui-checkbox__input" type="checkbox" ng-model="row[0]" ng-change="model.checkBoxHostnames(row[0], row[1])"/>
                                             <div class="lui-checkbox__check-wrap">
                                                 <span class="lui-checkbox__check" ></span>
                                             </div>
