--- a/appMover/app-mover-body.html
+++ b/appMover/app-mover-body.html
@@ -5,7 +5,6 @@
             ng-click="model.openHelp()">?</button>
     </div>
 </div>
-
 <div id="page-content-body">
     <div>
         <form name="form" id="appMoverForm" enctype="multipart/form-data" novalidate>
@@ -21,7 +20,6 @@
                             <button class="lui-button" style="position: absolute;top:55px;right:20px;" ng-click="model.getAppList()">Load Apps</button>
                         </div>
                     </div>
-
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -98,11 +96,21 @@
                         </table>
                     </div>
                 </div>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        App Mover Output Status:
+                    </div>
+                    <div class="panel-body">
+                        <div class="frame  lui-bg-default">
+                            <textarea readonly class="lui-textarea" ng-model="model.statusOutput" style="display: inline-block;width:100%;height: 240px;"
+                            />
+                        </div>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
-
 <div id="page-content-footer">
     <div id="button-bar">
         <button id="buttonDeploy" class="lui-button" ng-class="model.deployButtonValid() ? 'lui-button--toolbar-inverse' : 'lui-disabled'"
