--- a/appMover/app-mover-body.html
+++ b/appMover/app-mover-body.html
@@ -1,7 +1,8 @@
 <div class="navbar-fixed-top group">
     <div id="page-content-header">
         <h1 class="title">App Mover on: {{model.host}}</h1>
-        <button style="float:right;margin-right:400px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="help-dialog" ng-click="model.openHelp()">?</button>
+        <button style="float:right;margin-right:400px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="help-dialog"
+            ng-click="model.openHelp()">?</button>
     </div>
 </div>
 
@@ -14,7 +15,8 @@
                         Hostname to read apps from:
                     </div>
                     <div class="form-group" style="position:relative;padding-top:15px;padding-left:15px;padding-right:15px;height:80px;">
-                        <input type="text" class="lui-input" placeholder="enter hostname here" ng-model="model.appListHostname" id="hostname" name="hostname" />
+                        <input type="text" class="lui-input" placeholder="enter hostname here" ng-model="model.appListHostname" id="hostname" name="hostname"
+                        />
                         <div class="frame lui-bg-default">
                             <button class="lui-button" style="position: absolute;top:55px;right:20px;" ng-click="model.getAppList()">Load Apps</button>
                         </div>
@@ -63,7 +65,8 @@
                     </div>
                     <div class="panel-body">
                         <div class="frame  lui-bg-default">
-                            <input class="lui-input" placeholder="enter hostname here" ng-model="model.hostnameToAdd" style="display: inline-block;width:80%;" />
+                            <input class="lui-input" placeholder="enter hostname here" ng-model="model.hostnameToAdd" style="display: inline-block;width:80%;"
+                            />
                             <button class="lui-button" style="display: inline-block;width:15%;margin-left:4.5%;" ng-click="model.addHostnameToList()">Add</button>
                         </div>
                         <table class="table table-bordered table-data" style="margin-top:10px;">
@@ -95,6 +98,17 @@
                         </table>
                     </div>
                 </div>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        App Mover Output Status:
+                    </div>
+                    <div class="panel-body">
+                        <div class="frame  lui-bg-default">
+                            <textarea readonly class="lui-textarea" ng-model="model.statusOutput" style="display: inline-block;width:100%;height: 240px;"
+                            />
+                        </div>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
@@ -102,6 +116,7 @@
 
 <div id="page-content-footer">
     <div id="button-bar">
-        <button id="buttonDeploy" class="lui-button" ng-class="model.deployButtonValid() ? 'lui-button--toolbar-inverse' : 'lui-disabled'" ng-click="model.deployApps()">Deploy {{model.selectedApps.length}} app(s) to {{model.selectedNodes.length}} node(s)</button>
+        <button id="buttonDeploy" class="lui-button" ng-class="model.deployButtonValid() ? 'lui-button--toolbar-inverse' : 'lui-disabled'"
+            ng-click="model.deployApps()">Deploy {{model.selectedApps.length}} app(s) to {{model.selectedNodes.length}} node(s)</button>
     </div>
 </div>
